--- a/build-UnixProgramTest-Desktop_Qt_5_5_0_GCC_64bit-Debug/Makefile
+++ b/build-UnixProgramTest-Desktop_Qt_5_5_0_GCC_64bit-Debug/Makefile
@@ -52,21 +52,25 @@ SOURCES       = ../UnixProgramTest/main.cpp \
 		../UnixProgramTest/filemanager.cpp \
 		../UnixProgramTest/threadfileread.cpp \
 		../UnixProgramTest/dirlistmodel.cpp \
-		../UnixProgramTest/unixfile.cpp qrc_qml.cpp \
+		../UnixProgramTest/unixfile.cpp \
+		../UnixProgramTest/unixdatamanager.cpp qrc_qml.cpp \
 		qrc_res.cpp \
 		moc_filemanager.cpp \
 		moc_threadfileread.cpp \
-		moc_dirlistmodel.cpp
+		moc_dirlistmodel.cpp \
+		moc_unixdatamanager.cpp
 OBJECTS       = main.o \
 		filemanager.o \
 		threadfileread.o \
 		dirlistmodel.o \
 		unixfile.o \
+		unixdatamanager.o \
 		qrc_qml.o \
 		qrc_res.o \
 		moc_filemanager.o \
 		moc_threadfileread.o \
-		moc_dirlistmodel.o
+		moc_dirlistmodel.o \
+		moc_unixdatamanager.o
 DIST          = /opt/Qt5.5.0/5.5/gcc_64/mkspecs/features/spec_pre.prf \
 		/opt/Qt5.5.0/5.5/gcc_64/mkspecs/common/unix.conf \
 		/opt/Qt5.5.0/5.5/gcc_64/mkspecs/common/linux.conf \
@@ -203,11 +207,13 @@ DIST          = /opt/Qt5.5.0/5.5/gcc_64/mkspecs/features/spec_pre.prf \
 		../UnixProgramTest/UnixProgramTest.pro ../UnixProgramTest/filemanager.h \
 		../UnixProgramTest/threadfileread.h \
 		../UnixProgramTest/dirlistmodel.h \
-		../UnixProgramTest/unixfile.h ../UnixProgramTest/main.cpp \
+		../UnixProgramTest/unixfile.h \
+		../UnixProgramTest/unixdatamanager.h ../UnixProgramTest/main.cpp \
 		../UnixProgramTest/filemanager.cpp \
 		../UnixProgramTest/threadfileread.cpp \
 		../UnixProgramTest/dirlistmodel.cpp \
-		../UnixProgramTest/unixfile.cpp
+		../UnixProgramTest/unixfile.cpp \
+		../UnixProgramTest/unixdatamanager.cpp
 QMAKE_TARGET  = UnixProgramTest
 DESTDIR       = #avoid trailing-slash linebreak
 TARGET        = UnixProgramTest
@@ -538,8 +544,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents ../UnixProgramTest/qml.qrc ../UnixProgramTest/res.qrc $(DISTDIR)/
-	$(COPY_FILE) --parents ../UnixProgramTest/filemanager.h ../UnixProgramTest/threadfileread.h ../UnixProgramTest/dirlistmodel.h ../UnixProgramTest/unixfile.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../UnixProgramTest/main.cpp ../UnixProgramTest/filemanager.cpp ../UnixProgramTest/threadfileread.cpp ../UnixProgramTest/dirlistmodel.cpp ../UnixProgramTest/unixfile.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../UnixProgramTest/filemanager.h ../UnixProgramTest/threadfileread.h ../UnixProgramTest/dirlistmodel.h ../UnixProgramTest/unixfile.h ../UnixProgramTest/unixdatamanager.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../UnixProgramTest/main.cpp ../UnixProgramTest/filemanager.cpp ../UnixProgramTest/threadfileread.cpp ../UnixProgramTest/dirlistmodel.cpp ../UnixProgramTest/unixfile.cpp ../UnixProgramTest/unixdatamanager.cpp $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -564,6 +570,7 @@ compiler_rcc_make_all: qrc_qml.cpp qrc_res.cpp
 compiler_rcc_clean:
 	-$(DEL_FILE) qrc_qml.cpp qrc_res.cpp
 qrc_qml.cpp: ../UnixProgramTest/qml.qrc \
+		../UnixProgramTest/FormUnixData.qml \
 		../UnixProgramTest/FormFile.qml \
 		../UnixProgramTest/FormConfig.qml \
 		../UnixProgramTest/main.qml \
@@ -576,9 +583,9 @@ qrc_res.cpp: ../UnixProgramTest/res.qrc \
 		../UnixProgramTest/res/configure.png
 	/opt/Qt5.5.0/5.5/gcc_64/bin/rcc -name res ../UnixProgramTest/res.qrc -o qrc_res.cpp
 
-compiler_moc_header_make_all: moc_filemanager.cpp moc_threadfileread.cpp moc_dirlistmodel.cpp
+compiler_moc_header_make_all: moc_filemanager.cpp moc_threadfileread.cpp moc_dirlistmodel.cpp moc_unixdatamanager.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_filemanager.cpp moc_threadfileread.cpp moc_dirlistmodel.cpp
+	-$(DEL_FILE) moc_filemanager.cpp moc_threadfileread.cpp moc_dirlistmodel.cpp moc_unixdatamanager.cpp
 moc_filemanager.cpp: /opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QObject \
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobject.h \
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobjectdefs.h \
@@ -765,6 +772,77 @@ moc_dirlistmodel.cpp: /opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QObject \
 		../UnixProgramTest/unixfile.h \
 		../UnixProgramTest/dirlistmodel.h
 	/opt/Qt5.5.0/5.5/gcc_64/bin/moc $(DEFINES) -I/opt/Qt5.5.0/5.5/gcc_64/mkspecs/linux-g++ -I/root/zhouwork/UnixProgramTest -I/opt/Qt5.5.0/5.5/gcc_64/include -I/opt/Qt5.5.0/5.5/gcc_64/include/QtQuick -I/opt/Qt5.5.0/5.5/gcc_64/include/QtWidgets -I/opt/Qt5.5.0/5.5/gcc_64/include/QtGui -I/opt/Qt5.5.0/5.5/gcc_64/include/QtQml -I/opt/Qt5.5.0/5.5/gcc_64/include/QtNetwork -I/opt/Qt5.5.0/5.5/gcc_64/include/QtCore -I. ../UnixProgramTest/dirlistmodel.h -o moc_dirlistmodel.cpp
+
+moc_unixdatamanager.cpp: /opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QObject \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobject.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobjectdefs.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qnamespace.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qglobal.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qconfig.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qfeatures.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qsystemdetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qprocessordetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcompilerdetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtypeinfo.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtypetraits.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qsysinfo.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlogging.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qflags.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbasicatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qgenericatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_cxx11.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_gcc.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_msvc.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv7.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv6.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv5.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_ia64.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_mips.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_x86.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_unix.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qglobalstatic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmutex.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qnumeric.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstring.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qchar.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbytearray.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qrefcount.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qarraydata.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringbuilder.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qalgorithms.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qiterator.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbytearraylist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringlist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qregexp.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringmatcher.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcoreevent.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qscopedpointer.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmetatype.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qvarlengtharray.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcontainerfwd.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qisenum.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobject_impl.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QAbstractListModel \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qabstractitemmodel.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qvariant.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmap.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qpair.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qdebug.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qhash.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtextstream.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qiodevice.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlocale.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qshareddata.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qvector.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qpoint.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qset.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcontiguouscache.h \
+		../UnixProgramTest/unixdatamanager.h
+	/opt/Qt5.5.0/5.5/gcc_64/bin/moc $(DEFINES) -I/opt/Qt5.5.0/5.5/gcc_64/mkspecs/linux-g++ -I/root/zhouwork/UnixProgramTest -I/opt/Qt5.5.0/5.5/gcc_64/include -I/opt/Qt5.5.0/5.5/gcc_64/include/QtQuick -I/opt/Qt5.5.0/5.5/gcc_64/include/QtWidgets -I/opt/Qt5.5.0/5.5/gcc_64/include/QtGui -I/opt/Qt5.5.0/5.5/gcc_64/include/QtQml -I/opt/Qt5.5.0/5.5/gcc_64/include/QtNetwork -I/opt/Qt5.5.0/5.5/gcc_64/include/QtCore -I. ../UnixProgramTest/unixdatamanager.h -o moc_unixdatamanager.cpp
 
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
@@ -1078,7 +1156,10 @@ main.o: ../UnixProgramTest/main.cpp /opt/Qt5.5.0/5.5/gcc_64/include/QtWidgets/QA
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtQml/qqmlproperty.h \
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtQml/qqmlpropertymap.h \
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtQml/qtqmlversion.h \
-		../UnixProgramTest/filemanager.h
+		../UnixProgramTest/filemanager.h \
+		../UnixProgramTest/dirlistmodel.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QAbstractListModel \
+		../UnixProgramTest/unixfile.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../UnixProgramTest/main.cpp
 
 filemanager.o: ../UnixProgramTest/filemanager.cpp ../UnixProgramTest/filemanager.h \
@@ -1284,11 +1365,136 @@ dirlistmodel.o: ../UnixProgramTest/dirlistmodel.cpp ../UnixProgramTest/dirlistmo
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qset.h \
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcontiguouscache.h \
 		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QList \
-		../UnixProgramTest/unixfile.h
+		../UnixProgramTest/unixfile.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QDebug
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o dirlistmodel.o ../UnixProgramTest/dirlistmodel.cpp
 
-unixfile.o: ../UnixProgramTest/unixfile.cpp ../UnixProgramTest/unixfile.h
+unixfile.o: ../UnixProgramTest/unixfile.cpp ../UnixProgramTest/unixfile.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QObject \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobject.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobjectdefs.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qnamespace.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qglobal.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qconfig.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qfeatures.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qsystemdetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qprocessordetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcompilerdetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtypeinfo.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtypetraits.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qsysinfo.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlogging.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qflags.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbasicatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qgenericatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_cxx11.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_gcc.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_msvc.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv7.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv6.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv5.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_ia64.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_mips.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_x86.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_unix.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qglobalstatic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmutex.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qnumeric.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstring.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qchar.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbytearray.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qrefcount.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qarraydata.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringbuilder.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qalgorithms.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qiterator.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbytearraylist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringlist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qregexp.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringmatcher.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcoreevent.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qscopedpointer.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmetatype.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qvarlengtharray.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcontainerfwd.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qisenum.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobject_impl.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o unixfile.o ../UnixProgramTest/unixfile.cpp
+
+unixdatamanager.o: ../UnixProgramTest/unixdatamanager.cpp ../UnixProgramTest/unixdatamanager.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QObject \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobject.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobjectdefs.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qnamespace.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qglobal.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qconfig.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qfeatures.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qsystemdetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qprocessordetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcompilerdetection.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtypeinfo.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtypetraits.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qsysinfo.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlogging.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qflags.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbasicatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qgenericatomic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_cxx11.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_gcc.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_msvc.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv7.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv6.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_armv5.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_ia64.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_mips.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_x86.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qatomic_unix.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qglobalstatic.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmutex.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qnumeric.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstring.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qchar.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbytearray.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qrefcount.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qarraydata.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringbuilder.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qalgorithms.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qiterator.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qbytearraylist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringlist.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qregexp.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qstringmatcher.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcoreevent.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qscopedpointer.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmetatype.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qvarlengtharray.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcontainerfwd.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qisenum.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qobject_impl.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/QAbstractListModel \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qabstractitemmodel.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qvariant.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qmap.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qpair.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qdebug.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qhash.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qtextstream.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qiodevice.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qlocale.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qshareddata.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qvector.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qpoint.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qset.h \
+		/opt/Qt5.5.0/5.5/gcc_64/include/QtCore/qcontiguouscache.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o unixdatamanager.o ../UnixProgramTest/unixdatamanager.cpp
 
 qrc_qml.o: qrc_qml.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qrc_qml.o qrc_qml.cpp
@@ -1304,6 +1510,9 @@ moc_threadfileread.o: moc_threadfileread.cpp
 
 moc_dirlistmodel.o: moc_dirlistmodel.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_dirlistmodel.o moc_dirlistmodel.cpp
+
+moc_unixdatamanager.o: moc_unixdatamanager.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_unixdatamanager.o moc_unixdatamanager.cpp
 
 ####### Install
 
